# h3browserconformance

./: .gitignore  README.md  package.json
.github/workflows/: self-test.yml
adapters/picoquic/: README.md
browser/: README.md  index.html  run-chrome.mjs  run-firefox.mjs  run-safari.mjs  runner-common.mjs  webtransport-baton.js
e2e/: README.md
e2e/expected/: chrome-stable.json  edge-stable.json  firefox-stable.json  safari-stable.json
e2e/fixtures/: expected-bad-array-type.json  expected-bad-counter-type.json  expected-duplicate-scenario.json  expected-missing-metadata.json  expected-missing-reason.json  expected-server-bad-boolean-type.json  expected-server-bad-counter-type.json  expected-unknown-entry-field.json  expected-unknown-expect-field.json  expected-unknown-results-field.json  expected-unknown-server-field.json  manifest-bad-boolean-type.json  manifest-server-bad-counter-type.json  manifest-unknown-expect-field.json  manifest-unknown-server-field.json
e2e/manifests/: core.json
e2e/runners/: run-browser.mjs
native/pico_baton/: CMakeLists.txt  README.md  baton_app.c  wt_baton.c  wt_baton.h
native/picoquic/: README.md  h3zero_stream_test.c  h3zerotest.c  webtransport_test.c  webtransport_wire_test.c
wpt/: README.md  run-wpt.mjs
wpt/expected/: chrome-stable.json  edge-stable.json  firefox-stable.json  safari-stable.json
wpt/fixtures/: expected-duplicate-test.json  expected-missing-reason.json  expected-unknown-entry-field.json  expected-unknown-manifest-field.json  expected-unknown-test.json
wpt/fixtures/fake-wpt/: wpt
(+1 files in other folders)
